[package]
name = "lib_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Standard crates
 rand = "0.8.5"

# Non-standard crates
num-traits = "0.2.19"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
fltk = { version = "^1.4.32", features = ["fltk-bundled"] }

# For use in the function   fn activity_menu() stored in jt_lib.rs
#dialoguer = { version = "0.11.0", features = ["completion"] }
#console = "0.15.8"

# Reagan created crates
lib_jt = {path = "/home/camascounty/programming/rust/mine/lib_jt/"}
lib_file = {path = "/home/camascounty/programming/rust/mine/lib_file/"}
lib_input_fltk = {path = "/home/camascounty/programming/rust/mine/lib_input_fltk/"} 
