[package]
name = "lib_utils"
version = "0.1.1"
edition = "2021"
authors = ["John T. Reagan"]
license = "MIT"
description = "Misc utility functions."
readme = "/home/jtreagan/programming/rust/mine/lib_utils/README.MD"
repository = "https://github.com/jtreagan/lib_utils"

[dependencies]
#Standard Crates
rand = "^0.8.5"

#Non-standard Crates
dialoguer = { version = "0.11.0", features = ["completion"] }






